2009-04-02  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (EXTRA_DIST): Remove
	patches/gpgme/02-kleo-bugs-workaround.patch.
	* patches/gpgme/02-kleo-bugs-workaround.patch: Removed.

	* Makefile.am (EXTRA_DIST): Add patches for claws.
	* patches/claws-3.7.1/03-pipe.patch: New file.

	* src/Makefile.am (gpg4win_pkg_glib_configure): Set CCC to mingw's g++.

2009-03-25  Werner Koch  <wk@g10code.com>

	Release 1.9.15.

	* packages/packages.current: Update GnuPG.

2009-03-24  Marc Mutz <marc@kdab.net>

	* packages/packages.current: ftp.intevation.org -> ftp.kdab.net
	for kleopatra packages.

2009-03-24  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update kleopatra and kdelibs tarballs
	from the Intevation server.  Update gpgex.
	
2009-03-24  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update kdelibs.

2009-03-24  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* src/inst-kleopatra.nsi, src/uninst-kleopatra.nsi: Add new file
	gpg4win-compact.png.

2009-03-24  Marc Mutz <marc@kdab.net>

	* src/inst-kleopatra.nsi, src/uninst-kleopatra.nsi: Add new files
	gpg4win.png, kleopatra_config_gnupgsystem.desktop.

2009-03-23  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* src/gpg4win-src.nsi: Change English T_AboutGpg4win text.

2009-03-19  Colin Leroy  <colin@colino.net>

	* patches/claws-mail-3.7.1/01-fix-spaces-after-re.patch,
	* patches/claws-mail-3.7.1/02-3.7.1cvs22.patch: Bugfixes to Claws.
	* include/config.nsi.in, src/uninst-bsfilter.nsi
	* src/inst-bsfilter.nsi, src/inst-bsfilter_plugin.nsi
	* src/Makefile.am, src/inst-sections.nsi
	* src/uninst-bsfilter_plugin.nsi, configure.ac
	* packages/packages.current: Add Bsfilter and Claws Mail's
	bsfilter plugin for bayesian anti-spam.
	* src/inst-libiconv.nsi, src/uninst-libiconv.nsi: Move iconv.dll
	to pub/ so that it's in the PATH (needed by bsfilter)

2009-03-19  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
