@@ -1,0 +1,12 @@
+prefix=/usr
+exec_prefix=${prefix}
+libdir=${prefix}/lib
+includedir=${prefix}/include/QtGui
+
+Name: Qtgui
+Description: Qtgui Library
+Version: 4.5.0
+Libs: -L${libdir} -lQtGui 
+Cflags: -DQT_LARGEFILE_SUPPORT -DQT_DLL -DQT_NO_DEBUG -DQT_CORE_LIB -DQT_THREAD_SUPPORT -I/usr/include -I${includedir}
+Requires: QtCore
+
